fixed image scaline on small devices

--- a/css/template.css
+++ b/css/template.css
@@ -219,6 +219,9 @@ footer{
 	aside article{
 		width: 100%;
 	}
+	img.large,img.extralarge{
+		width: 100%;
+	}
 }
 
 @media only screen and (min-width: 1920px){
